# appium_setup

./: .gitignore  .xcconfig  Dockerfile  Readme.md  apium_setup.py  desired_caps.json  docker-compose.yml  pyproject.toml  pyvenv.cfg
mobile_testing/: android_A34.py
mobile_testing/android/: Card_and_Stikers.py  Deposits_products.py  Loan_products.py  account_test.py  actions.py  activefilters_test.py  android_A34.py  capabilities.json  card_and_stikcers_data.json  card_detail_test.py  count_and_transactions_test.py  current_account.py  data_landing_page.json  data_settings.json  incoming_transactions_test.py  landing_page.py  locators.py  login.py  login_stg.py  main_menu.py  payments_create_domestic_template_test.py  settings.py  test_collection.py  test_data.json  test_helper.py  touch_action_tests.py  transfers_test.py  user_data.json
mobile_testing/android/Basic_onboarding/: Login_process.py
mobile_testing/android/Full_Onboarding/: Personal_data_colection.py  User_registration.py  basic_registration_process.py
mobile_testing/android/Landing_page/: List_of_accounts.py
mobile_testing/android/Main_menu/: Landing_bottom.py
mobile_testing/iOS/: Incoming_transactions.py  account_test.py  apium_setup.py  capabilities.json  login_iOS.py  test_collection.py  test_helper.py  touch_action_tests.py
